--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,7 @@ jobs:
 
       - name: Poetry Setup
         uses: Gr1N/setup-poetry@v5
+        run: poetry --version
+
+      - name: Export Requirements
+        run: poetry export -f requirements.txt -o requirements.txt --without-hashes
