--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Poetry Setup
         uses: Gr1N/setup-poetry@v5
+
+      - name: Check poetry version
         run: poetry --version
 
       - name: Export Requirements
