--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Export Requirements
         run: poetry export -f requirements.txt -o requirements.txt --without-hashes
 
-      - name: Check Requirements
-        run: poetry export
+      - name : Check Requirements
+        run: ls
